# aws-appconfig-pydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: publish.yml  test.yml
pydantic_appconfig/: __init__.py  app_config.py
tests/: conftest.py  test_app_config.py  test_missing_yaml.py  test_pydantic_config.py
